# knowledgebase-agent

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  dev.sh  railway.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AdminLogin.tsx  DocumentList.tsx  QueryPanel.tsx  Upload.tsx
migrations/: 001_initial.sql
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/controllers/: documents.rs  mod.rs  query.rs
src/db/: documents.rs  mod.rs  page_indexes.rs
src/models/: document.rs
src/services/: indexer.rs  llm.rs  mod.rs  rag_agent.rs  s3.rs
tests/: api_test.rs  integration_steelhead.sh  integration_test.rs
