[package]
name = "knowledgebase-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database (Neon Postgres)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# S3 (DigitalOcean Spaces compatible)
rust-s3 = { version = "0.35", features = ["tokio-rustls-tls"], default-features = false }

# Agent
metalcraft = { path = "../metalcraft", features = ["rig"] }
rig = "0.36"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"

# Async utilities
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
